// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Power Fx Functions [CountIf error1] =CountIf(#28e28190-63bd-4f70-aeca-26e72574c01a, >= 3) 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": [Function],
    "errors": Array [],
    "name": "=",
    "type": "any",
  },
  Object {
    "code": "Function",
    "display": [Function],
    "errors": Array [],
    "name": "CountIf",
    "type": "any",
  },
  Object {
    "code": "LParen",
    "display": [Function],
    "errors": Array [],
    "name": "(",
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "display": [Function],
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
  },
  Object {
    "code": "Comma",
    "display": [Function],
    "errors": Array [],
    "name": ",",
    "type": "any",
  },
  Object {
    "code": "GreaterThanEqual",
    "display": [Function],
    "errors": Array [],
    "name": ">=",
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "display": [Function],
    "errors": Array [],
    "name": "3",
    "type": "number",
  },
  Object {
    "code": "RParen",
    "display": [Function],
    "errors": Array [],
    "name": ")",
    "type": "number",
  },
]
`;

exports[`Power Fx Functions [CountIf ok] =CountIf(#28e28190-63bd-4f70-aeca-26e72574c01a, #28e28190-63bd-4f70-aeca-26e72574c01a.62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6 >= 3) 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": [Function],
    "errors": Array [],
    "name": "=",
    "type": "any",
  },
  Object {
    "code": "Function",
    "display": [Function],
    "errors": Array [],
    "name": "CountIf",
    "type": "any",
  },
  Object {
    "code": "LParen",
    "display": [Function],
    "errors": Array [],
    "name": "(",
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "display": [Function],
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
  },
  Object {
    "code": "Comma",
    "display": [Function],
    "errors": Array [],
    "name": ",",
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "display": [Function],
    "errors": Array [
      Object {
        "message": "Expected number but got Column",
        "type": "type",
      },
    ],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
  },
  Object {
    "code": "Dot",
    "display": [Function],
    "errors": Array [
      Object {
        "message": "Expected number but got Column",
        "type": "type",
      },
    ],
    "name": ".",
    "type": "any",
  },
  Object {
    "code": "Column",
    "display": [Function],
    "errors": Array [
      Object {
        "message": "Expected number but got Column",
        "type": "type",
      },
    ],
    "name": "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
  },
  Object {
    "code": "GreaterThanEqual",
    "display": [Function],
    "errors": Array [],
    "name": ">=",
    "type": "boolean",
  },
  Object {
    "code": "NumberLiteral",
    "display": [Function],
    "errors": Array [],
    "name": "3",
    "type": "number",
  },
  Object {
    "code": "RParen",
    "display": [Function],
    "errors": Array [],
    "name": ")",
    "type": "number",
  },
]
`;
